# Multi-threaded-challenge-solver

./: CMakeLists.txt  task  task.c  taskBackup.c  test.py
